# dio

./: .gitignore  .gitmodules  00_primeira_funcao.py  01_retorno_da_funcao.py  02_argumentos_nomeados.py  04_parametros_somente_por_posicao.py  05_parametros_somente_por_nome.py  06_objetos_de_primeira_classe.py  07_escopo_local_e_global.py  1.1 Introdução ao Desenvolvimento Moderno de Software - Materiais de apoio - Introdução ao Desenvolvimento Moderno de Software.mhtml  1.1_desafio.py  1.2 - Primeiros Passos com o Docker - Lista de Comandos.mhtml  1.2 Introdução à Programação e Pensamento Computacional - Materiais de apoio.mhtml  1.2_desafio.py  1.3 Armazenamento de Dados com Docker - Materiais de apoio.mhtml  1.3 Introdução ao Ecossistema e Documentação PHP - Materiais de apoio.mhtml  2.1 Definição e Criação de um Docker File - Materiais de apoio.mhtml  Adicionando Segurança a uma API REST com Spring Security.mhtml  Agrupando Registros e Tabelas com Join Statement.mhtml  Algoritmos Genéticos.mhtml  Algoritmos de Regressão para Machine Learning.mhtml  Algoritmos de SVM (Support Vector Machine).mhtml  Algoritmos e Aprendizado de Máquina.mhtml  Ambiente de Desenvolvimento Java.mhtml  Analisando dados de um Dashboard de Vendas no Power BI.mhtml  Análise de Documentos Anti-fraude com AzureAI.mhtml  Aplicar a Engenharia de Prompt com o Serviço OpenAI do Azure.mhtml  Aplicações Práticas com Deep Learning.mhtml  Aplicações Práticas da Inteligência Artificial.mhtml  Aplicações e Impacto da IA no Mundo Atual.mhtml  Aprendizado por Reforço em Machine Learning.mhtml  (+191 more)
.bash/: .bash
(+399 files in other folders)
