[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Julio Mendes <juliomendes160@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.110.1"
uvicorn = {version = "0.29.0", extras = ["standard"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
